@@ -3,8 +3,8 @@ var http = require('http');
 var https = require('https');
 var url = require('url');
 var EventEmitter = require('events').EventEmitter;
+var Stream = require('stream');
 var UserError = require('usererror');
-var BufferedStream = require('bufferedstream');
 var utils = require('./utils');
 
 /**
@@ -206,20 +206,25 @@ function bind(app, server) {
     call(app, env, function (status, headers, body) {
       res.writeHead(status, headers);
 
-      if (typeof body === 'string') {
-        if (body == '') {
+      if (body instanceof Stream) {
+        util.pump(body, res);
+
+        if (typeof body.resume === 'function') {
+          body.resume();
+        }
+      } else {
+        if (body === '') {
           res.end();
         } else {
           res.end(body);
         }
-      } else {
-        // Resume the stream in case it's paused.
-        if (typeof body.resume === 'function') {
-          body.resume();
-        }
-
-        util.pump(body, res);
       }
+
+      // Since we pause the input stream on the way in we need to make sure it
+      // has a chance to emit all its data. Otherwise the event loop will wait
+      // for it to finish emitting data.
+      // See https://github.com/mjijackson/bufferedstream/pull/3#issuecomment-9203538
+      env.input.resume();
     });
   });
 }
@@ -239,8 +244,8 @@ function bind(app, server) {
  *   - scriptName       The virtual location of the application
  *   - pathInfo         The path of the request
  *   - queryString      The query string
- *   - headers          An object of HTTP headers
- *   - input            The input stream of the request body
+ *   - headers          An object of HTTP headers and values
+ *   - input            The input stream of the request body (required)
  *   - error            The error stream
  */
 function makeEnv(opts) {
@@ -272,11 +277,27 @@ function makeEnv(opts) {
     }
   }
 
-  env.input = new BufferedStream(opts.input || '');
-  env.error = opts.error || process.stderr;
-  env.strataVersion = exports.version;
+  if (opts.input instanceof Stream) {
+    env.input = opts.input;
+  } else {
+    throw new StrataError('Environment input must be a Stream');
+  }
 
+  // The input stream is paused so that we don't miss any data events that
+  // are registered on future ticks.
   env.input.pause();
+
+  if (opts.error) {
+    if (opts.error instanceof Stream) {
+      env.error = opts.error;
+    } else {
+      throw new StrataError('Environment error must be a Stream');
+    }
+  } else {
+    env.error = process.stderr;
+  }
+
+  env.strataVersion = exports.version;
 
   return env;
 }
