@@ -42,6 +42,12 @@ function makeEnv(opts) {
     }
   }
 
+  opts.input = opts.input || '';
+
+  if (typeof opts.input === 'string') {
+    opts.input = new BufferedStream(opts.input);
+  }
+
   return strata.env(opts);
 }
 
