@@ -351,20 +351,21 @@ Request.prototype.__defineGetter__('parseableData', function () {
  * Cookie header.
  */
 Request.prototype.cookies = function (callback) {
-  var cookieString = this.env.headers['cookie'];
+  var env = this.env;
+  var cookieString = env.headers['cookie'];
 
   if (!cookieString) {
     callback(null, {});
     return;
   }
 
-  if (this.env.strataCookieString !== cookieString) {
-    this.env.strataCookieString = cookieString;
-    delete this.env.strataCookies;
+  if (env.strataCookieString !== cookieString) {
+    env.strataCookieString = cookieString;
+    delete env.strataCookies;
   }
 
-  if (this.env.strataCookies) {
-    callback(null, this.env.strataCookies);
+  if (env.strataCookies) {
+    callback(null, env.strataCookies);
     return;
   }
 
@@ -381,8 +382,7 @@ Request.prototype.cookies = function (callback) {
     }
   }
 
-  this.env.strataCookies = cookies;
-
+  env.strataCookies = cookies;
   callback(null, cookies);
 };
 
@@ -391,26 +391,27 @@ Request.prototype.cookies = function (callback) {
  * query string.
  */
 Request.prototype.query = function (callback) {
-  var queryString = this.env.queryString;
+  var env = this.env;
+  var queryString = env.queryString;
 
   if (!queryString) {
     callback(null, {});
     return;
   }
 
-  if (this.env.strataQueryString !== queryString) {
-    this.env.strataQueryString = queryString;
-    delete this.env.strataQuery;
+  if (env.strataQueryString !== queryString) {
+    env.strataQueryString = queryString;
+    delete env.strataQuery;
   }
 
-  if (this.env.strataQuery) {
-    callback(null, this.env.strataQuery);
+  if (env.strataQuery) {
+    callback(null, env.strataQuery);
     return;
   }
 
   var query = qs.parse(queryString);
-  this.strataQuery = query;
 
+  env.strataQuery = query;
   callback(null, query);
 };
 
@@ -420,31 +421,29 @@ Request.prototype.query = function (callback) {
  * contents of the body as a string.
  */
 Request.prototype.body = function (callback) {
-  if ('strataBody' in this.env) {
-    callback(null, this.env.strataBody);
+  var env = this.env;
+
+  if ('strataBody' in env) {
+    callback(null, env.strataBody);
     return;
   }
 
-  var input = this.env.input;
-  var self = this;
-
-  input.resume(); // In case it's paused.
+  var input = env.input;
 
   if (this.mediaType === 'application/json') {
-    var body = '';
+    var buffer = '';
 
-    input.on('data', function (buffer) {
-      body += buffer.toString('utf8');
+    input.on('data', function (chunk) {
+      buffer += chunk.toString();
     });
 
     input.on('end', function () {
       try {
-        var obj = JSON.parse(body);
-        self.env.strataBody = obj;
-        callback(null, obj);
+        var body = JSON.parse(buffer);
+        env.strataBody = body;
+        callback(null, body);
       } catch (e) {
-        var err = new strata.Error('Invalid JSON', e);
-        callback(err, {});
+        callback(new strata.Error('Invalid JSON', e), {});
       }
     });
   } else if (this.parseableData) {
@@ -467,7 +466,7 @@ Request.prototype.body = function (callback) {
       };
 
       parser.onEnd = function () {
-        self.env.strataBody = body;
+        env.strataBody = body;
         callback(null, body);
       };
 
@@ -484,6 +483,7 @@ Request.prototype.body = function (callback) {
 
       input.on('data', function (buffer) {
         var length = parser.write(buffer);
+
         if (length !== buffer.length) {
           input.pause();
           callback(new strata.Error('Error parsing multipart body: ' + length + ' of ' + buffer.length + ' bytes parsed'), body);
@@ -505,27 +505,25 @@ Request.prototype.body = function (callback) {
       });
 
       input.on('end', function () {
-        callback(null, qs.parse(buffer));
-      });
-    }
-
-  } else {
-    var body = '';
-
-    if (input.ended) {
-      self.env.strataBody = body;
-      callback(null, body);
-    } else {
-      input.on('data', function (buffer) {
-        body += buffer.toString('utf8');
-      });
-
-      input.on('end', function () {
-        self.env.strataBody = body;
+        var body = qs.parse(buffer);
+        env.strataBody = body;
         callback(null, body);
       });
     }
+  } else {
+    var body = '';
+
+    input.on('data', function (chunk) {
+      body += chunk.toString();
+    });
+
+    input.on('end', function () {
+      env.strataBody = body;
+      callback(null, body);
+    });
   }
+
+  input.resume();
 };
 
 /**
@@ -533,18 +531,16 @@ Request.prototype.body = function (callback) {
  * body parameters.
  */
 Request.prototype.params = function (callback) {
-  if (this.env.strataParams) {
-    callback(null, this.env.strataParams);
+  var env = this.env;
+
+  if (env.strataParams) {
+    callback(null, env.strataParams);
     return;
   }
 
-  var input = this.env.input;
+  var input = env.input;
   var params = {};
   var self = this;
-
-  // Need to pause the input stream here because body parsing is deferred
-  // until the query parsing is done.
-  input.pause();
 
   this.query(function (err, query) {
     if (err) {
@@ -564,7 +560,7 @@ Request.prototype.params = function (callback) {
             }
           }
 
-          self.env.strataParams = params;
+          env.strataParams = params;
           callback(null, params);
         }
       });
